# xauusdv1

./: .dockerignore  .koyebignore  .replit  DEPLOYMENT.md  DEPLOY_KOYEB.md  Dockerfile  active_trade.json  bot_state_v30.json  bot_state_v31.json  config.py  deriv_ws.py  health_server.py  main.py  pyproject.toml  replit.md  requirements.txt  signal_engine.py  signal_history.json  state_manager.py  subscribers.json  telegram_service.py  user_states.json  utils.py
attached_assets/: Pasted--2-DONE-6-9s-3-internal-load-dockerignore-3-transferrin_1766085012118.txt  Pasted--Strategi-Scalping-Menggunakan-EMA-50-RSI-dan-ADX-Strat_1766083477417.txt  Pasted-2025-12-18-13-53-32-827-INFO-Menunggu-18-detik-sebelum-_1766079707900.txt  Pasted-2025-12-24-20-33-30-739-INFO-Tracking-3681-BUY-Price-44_1766610568388.txt  Pasted-Instance-created-Preparing-to-start-Starting-download-f_1766382843971.txt  Pasted-Instance-created-Preparing-to-start-Starting-download-f_1766585091274.txt  successful-emmi-xauusdv1_2025-12-22T05_21_04.044Z_1766381603589.txt
